# libNGX

./: CMakeLists.txt  LICENSE.TXT  README.md
include/: common_header.h  config_header.h  ngx.h
include/Core/: Arch.h  ArchX86.h  Array.h  BasicMemoryBlock.h  Buf.h  Buffer.h  BufferAllocator.h  BufferBuilder.h  BufferMemoryBlock.h  BufferMemoryBlockRecycler.h  Checksum.h  Connection.h  Core.h  CryptoUtil.h  DAGScheduler.h  Digest.h  EPollEventDomain.h  Error.h  EventDomain.h  EventEntity.h  FSTree.h  Hash.h  LinuxOSUtility.h  List.h  Listen.h  Listening.h  Lock.h  MemAllocator.h  MemBlock.h  MemoryBlock.h  MemoryBlockAllocator.h  OSAgent.h  Pool.h  Queue.h  RBTree.h  Recyclable.h  Recylcer.h  Ref.h  Reference.h  Resetable.h  (+6 more)
include/Core/ADT/: ADT.h  Allocator.h  Array.h  Queue.h  RBTree.h  SmallVector.h  qnode.h
include/Core/Arch/: Arch.h  ArchX86.h  X86.h
include/Core/BasicComponent/: BasicComponent.h  BasicMemoryBlock.h  BoundCursor.h  Buffer.h  BufferAllocator.h  BufferBuilder.h  BufferCursor.h  BufferMemoryBlock.h  BufferMemoryBlockCollector.h  BufferMemoryBlockRecycleBin.h  BufferMemoryBlockRecycler.h  Checksum.h  Collector.h  Connection.h  Cursor.h  Dictionary.h  Digest.h  Error.h  EventDomain.h  EventEntity.h  FileCache.h  Hash.h  Listening.h  Lock.h  MemoryBlockAllocator.h  MemoryBuffer.h  MemoryPool.h  ModuleRegistry.h  Pool.h  PoolMemoryBlockCollector.h  PoolMemoryBlockRecycler.h  Recyclable.h  Recylcer.h  Reference.h  Reusable.h  Server.h  Socket.h  SocketEventDomain.h  SocketTimerHub.h  SpinLock.h  (+7 more)
include/Core/DataStructure/: Array.h  DataStructure.h  List.h  Queue.h  RBTree.h
include/Core/MetaClass/: Achor.h  AlignBuild.h  Allocator.h  AllocatorBuild.h  CanBuild.h  CanReset.h  GC.h  Lock.h  MemAllocator.h  MetaClass.h  Ref.h  Reference.h
include/Core/Support/: BasicMemoryBlock.h  BoundCursor.h  Buffer.h  BufferBuilder.h  BufferMemoryBlock.h  BufferMemoryBlockCollector.h  Checksum.h  Collector.h  Connection.h  Cursor.h  Dictionary.h  Digest.h  Error.h  EventDomain.h  EventEntity.h  Hash.h  Listen.h  Listening.h  MemoryBlockAllocator.h  MemoryBuffer.h  ModuleRegistry.h  Pool.h  PoolMemoryBlockCollector.h  Reference.h  Reusable.h  Server.h  Socket.h  SocketEventDomain.h  Support.h  TCPConnection.h  TCPListen.h  TCPListening.h  ThreadPool.h  Time.h  TimerTree.h  spin_lock.h
include/Core/Types/: Array.h  DictionaryTest.h  List.h  Queue.h  RBTree.h  RBTree2.h  RBTree2Tree.h  Types.h
include/HTTP/: HTTP.h  HTTPComponent.h  HTTPConnection.h  HTTPConnectionBuilder.h  HTTPConnectionCollector.h  HTTPConnectionRecycleBin.h  HTTPConnectionRecycler.h  HTTPConstantResponse.h  HTTPContext.h  HTTPCoreHeader.h  HTTPError.h  HTTPHeader.h  HTTPListen.h  HTTPListening.h  HTTPParser.h  HTTPRequest.h  HTTPResponse.h  HTTPServer.h  HTTPServerBuilder.h  HTTPURITree.h  Mux.h  common_header.h  config_header.h
include/HTTP/Mux/: Mux.h  Router.h  Service.h
include/HTTP/Router/: Router.h
include/Http/: Http.h  HttpConnection.h  HttpConnectionBuilder.h  HttpConnectionRecycler.h  HttpConnectionRecyclerTest.h  HttpConstantResponse.h  HttpError.h  HttpRequest.h  HttpRequestBuffer.h  HttpRequestContext.h  HttpResponse.h  HttpResponseBuffer.h  HttpServer.h  HttpServerBuilder.h  HttpURITree.h  ReadBuffer.h
src/: test.cpp
src/Core/: Arch.cpp  ArchX86.cpp  Array.cpp  BasicMemoryBlock.cpp  Buf.cpp  Buffer.cpp  BufferBuilder.cpp  BufferMemoryBlock.cpp  BufferMemoryBlockRecycler.cpp  Checksum.cpp  Connection.cpp  CryptoUtil.cpp  EPollEventDomain.cpp  Error.cpp  EventDomain.cpp  FSTree.cpp  Hash.cpp  List.cpp  Listen.cpp  Listening.cpp  Lock.cpp  MemBlock.cpp  MemoryBlock.cpp  MemoryBlockAllocator.cpp  Pool.cpp  Queue.cpp  RBTree.cpp  Ref.cpp  Reference.cpp  Server.cpp  Socket.cpp  SocketEventDomain.cpp  ThreadPool.cpp  Time.cpp  TimerTree.cpp
src/Core/ADT/: Queue.cpp  RBTree.cpp  qnode.cpp
src/Core/Arch/: ArchX86.cpp  X86.cpp
src/Core/BasicComponent/: BasicMemoryBlock.cpp  BoundCursor.cpp  Buffer.cpp  BufferBuilder.cpp  BufferCursor.cpp  BufferMemoryBlock.cpp  BufferMemoryBlockCollector.cpp  BufferMemoryBlockRecycleBin.cpp  BufferMemoryBlockRecycler.cpp  Checksum.cpp  Connection.cpp  Cursor.cpp  Dictionary.cpp  Error.cpp  EventDomain.cpp  Hash.cpp  Listening.cpp  Lock.cpp  MemoryBlockAllocator.cpp  MemoryBuffer.cpp  MemoryPool.cpp  Pool.cpp  Reference.cpp  Socket.cpp  SocketEventDomain.cpp  SocketTimerHub.cpp  SpinLock.cpp  Spinlock.cpp  TCPConnection.cpp  TCPListening.cpp  ThreadPool.cpp  Time.cpp  TimerHub.cpp  TimerTree.cpp
src/Core/DataStructure/: Array.cpp  List.cpp  Queue.cpp  RBTree.cpp
src/Core/Support/: BasicMemoryBlock.cpp  BoundCursor.cpp  Buffer.cpp  BufferBuilder.cpp  BufferMemoryBlock.cpp  BufferMemoryBlockCollector.cpp  Checksum.cpp  Connection.cpp  Cursor.cpp  Dictionary.cpp  Error.cpp  EventDomain.cpp  Listen.cpp  Listening.cpp  MemoryBuffer.cpp  Pool.cpp  Reference.cpp  Time.cpp  (+7 more)
src/HTTP/: HTTPComponent.cpp  HTTPConnection.cpp  HTTPConnectionBuilder.cpp  HTTPConnectionCollector.cpp  HTTPConnectionRecycleBin.cpp  HTTPConnectionRecycler.cpp  HTTPContext.cpp  HTTPCoreHeader.cpp  HTTPError.cpp  HTTPHeader.cpp  HTTPListen.cpp  HTTPListening.cpp  HTTPParser.cpp  HTTPRequest.cpp  HTTPResponse.cpp  HTTPServer.cpp  Mux.cpp  testMux.cpp
src/Http/: HttpConnection.cpp  HttpConnectionRecycler.cpp  HttpError.cpp  HttpRequestBuffer.cpp  HttpRequestContext.cpp  HttpServer.cpp
test/: Test.cpp  testMux.cpp
test/Core/: ArrayTest.cpp  BufTest.cpp  BufferTest.cpp  CRCTest.cpp  CoreTest.cpp  DictionaryTest.cpp  EPollEventDomainTest.cpp  FSTreeTest.cpp  HashTest.cpp  LockTest.cpp  Makefile  MemBlockTest.cpp  PoolTest.cpp  RBTree.cpp  RBTree2.cpp  RBTree2Tree.cpp  RBTreeTest.cpp  SmallVectorTest.cpp  SocketTest.cpp  Test.cpp  ThreadPool.cpp  TimeTest.cpp  TimerHubTest.cpp  TimerTreeTest.cpp
test/HTTP/: HTTPConnectionCollector.cpp  HTTPConnectionRecycleBin.cpp  HTTPConnectionRecycler.cpp  HTTPParseTest.cpp  HTTPServerTest.cpp  HTTPTest.cpp
test/Http/: HttpConnectionRecycler.cpp  HttpConnectionRecyclerTest.cpp  HttpServerTest.cpp  HttpTest.cpp  RequestLineParseTest.cpp
(+9 files in other folders)
